--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <h2>About Me</h2>
             <div class = "profile-img">
-                <img src = "" alt = "Profile Picture">
+                <img src = "images/profile.jpg" alt = "Profile Picture">
             </div>
             <p>My name is Mason Gatfield, and I am a fourth-year Data Science student at the University of Michigan. Throughout my university education and personal projects, I have gained proficiency in Python, R, and C++ for data analysis and project development. Additionally, I have experience working with both SQL and NoSQL databases, with a recent focus on integrating DBMS principles into applications. </p>
  
